# automacao3

./: .gitignore  app.py  automacao3.spec  candidates_results.csv  config.json  exmaple.py  main.py  main2.py  package-lock.json  pyproject.toml  routes.py  sentence_transformer.py  splash.py  tailwind.config.js
.github/prompts/: plan-cleanCodeRefactor.prompt.md  plan-configurationPage.prompt.md  plan-interactiveCorrespondenceSelection.prompt.md
backend/utils/: embeddings.py
data/: .~lock.loja.xlsx#  .~lock.pesquisa.xlsx#  input.py  loja.xlsx  medias_pneu_produtos.csv  pesquisa.xlsx  pesquisa_cerveja_source.html
data/output/: candidates_results.csv
exceptions/: __init__.py  gemini.py
frontend/static/html/: sheetjs.html
frontend/static/js/: home.js
html/: sheetjs.html
html/pesquisa/: pesquisa_cerveja_source.html
services/: matching.py
static/css/: tailwind.css
static/html/: config.html  home.html  results.html  upload.html
static/js/: config.js  home.js  results.js  tasks.js  upload.js
templates/: _navbar.html  base.html  config.html  home.html  results.html  tasks.html  upload.html
utils/: ai.py  cache.py  config.py  db.py  domain.py  embeddings.py  input.py  preprocesssing.py  reranker.py
utils/models/: gemini.py  ollama.py
web/: routes.py  schemas.py
