[project]
name = "automacao3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
